# claude-code-starter-kit

./: .gitattributes  .gitignore  README.md
new-engineer-setup/: justfile
new-engineer-setup/.claude/: settings.json
new-engineer-setup/.claude/commands/: biweekly.md  install.md  load-ai-docs.md  maintenance.md  onboard-candidate.md  reverse-goal-setting.md  review-candidate.md  semantic-commit.md  sentient.md  spawn-project.md  t-metaprompt-workflow.md
new-engineer-setup/.claude/hooks/: session_start.py  setup_init.py  user_prompt_submit.py
new-engineer-setup/.claude/hooks/validators/: bash_validator.py  ruff_validator.py  validate_file_contains.py  validate_new_file.py
project-boilerplate/: .gitignore  CLAUDE.md  env.sample.txt  justfile  pyproject.toml
project-boilerplate/.claude/: settings.json
project-boilerplate/.claude/agents/: docs-scraper.md
project-boilerplate/.claude/commands/: fix.md  load-ai-docs.md  meta-prompt.md  plan.md  review.md  setup.md
project-boilerplate/.claude/hooks/: post_tool_use.py  pre_tool_use.py  session_start.py  setup_init.py  user_prompt_submit.py  validate_setup.py
project-boilerplate/ai_docs/: README.md
